--- a/sample-app/pom.xml
+++ b/sample-app/pom.xml
@@ -33,7 +33,15 @@
 		<java.version>1.8</java.version>
 		<swagger-version>2.5.0</swagger-version>
 		<jackson.version>2.9.5</jackson.version>
-
+		<!-- Sonar Properties -->
+		<sonar.jdbc.url>jdbc:mysql://localhost:3306/sonar?useUnicode=true&amp;characterEncoding=utf8</sonar.jdbc.url>
+        <sonar.jdbc.username>sonar</sonar.jdbc.username>
+        <sonar.jdbc.password>sonar</sonar.jdbc.password>
+        <sonar.host.url>http://localhost:9000</sonar.host.url>
+        
+		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+        <jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
+        <sonar.jacoco.reportPaths>${basedir}/target/jacoco.exec</sonar.jacoco.reportPaths>
 	</properties>
 
 	<dependencies>
@@ -98,7 +106,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>sonar-maven-plugin</artifactId>
-				<version>2.3</version>
+				<version>3.6.0.1398</version>
 			</plugin>
 
 			<plugin>
@@ -108,6 +116,7 @@
 				<configuration>
 					<excludes>
 						<exclude>**/*com/sample/app/SampleAppApplication.class</exclude>
+						 <exclude>**/*com/sample/app/models/**/*</exclude>
 					</excludes>
 				</configuration>
 				<executions>
