--- a/sample-app/src/main/resources/application.properties
+++ b/sample-app/src/main/resources/application.properties
@@ -2,3 +2,11 @@ spring.application.name=sample-app
 server.port=8080
 
 management.endpoints.web.exposure.include=*
+
+
+# logging level
+logging.level.org.springframework=ERROR
+logging.level.com.sample.app=DEBUG
+
+# output to a file
+logging.file=logs/sample-app.log
